Add remote script

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
     <div id="root"></div>
 
 	</body>
-	<script async  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  
-	
+	<!-- <script async  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>   -->
+	<script 
+		data-ad-client="ca-pub-9999433342224525" 
+		async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+	</script>
 </html>
